Added Checkstyle and fixed errors
Based off of Kyori checkstyle

Signed-off-by: TreyRuffy <TreyRuffy@users.noreply.github.com>